Fix: Mostrar cards completos y acceso jugadores
Ajusta el grid de Teams, corrige el footer de U15 y agrega enlaces visibles a la seccion de jugadores.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                     <li><a href="#home" class="nav-link active">Home</a></li>
                     <li><a href="#club-info" class="nav-link">Club Info</a></li>
                     <li><a href="#teams" class="nav-link">Teams</a></li>
+                    <li><a href="#spelers" class="nav-link">Spelers</a></li>
                     <li><a href="#nieuws" class="nav-link">Nieuws</a></li>
                     <li><a href="#eventos" class="nav-link">Eventos</a></li>
                     <li><a href="#kalender" class="nav-link">Kalender</a></li>
@@ -439,6 +440,12 @@
                     <p class="section-description">Ontdek onze verschillende leeftijdsgroepen en sluit je aan bij het
                         team dat bij jou past</p>
                 </div>
+                <div style="text-align: center; margin-bottom: 1.5rem;">
+                    <a href="#spelers" class="btn-new btn-new-outline">
+                        <span>Bekijk Spelers</span>
+                        <i class="fas fa-users"></i>
+                    </a>
+                </div>
                 <div class="teams-masonry">
                     <div class="team-card">
                         <div class="team-image">
@@ -556,6 +563,9 @@
                         </div>
                     </div>
                     <div class="team-card highlight">
+                        <div class="team-image">
+                            <img src="images/gallery/allen 1.jpeg" alt="U15 Team">
+                        </div>
                         <div class="team-card-header">
                             <span class="team-age">U15</span>
                             <i class="fas fa-star"></i>
@@ -570,23 +580,10 @@
                             </ul>
                         </div>
                         <div class="team-card-footer">
-                            .btn-new {
-                            display: inline-flex;
-                            align-items: center;
-                            gap: 0.75rem;
-                            padding: 1rem 2rem;
-                            border-radius: 8px;
-                            font-weight: 700;
-                            text-transform: uppercase;
-                            font-size: 0.95rem;
-                            letter-spacing: 1px;
-                            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-                            position: relative;
-                            overflow: hidden;
-                            cursor: pointer;
-                            border: none;
-                            min-height: 50px;
-                            }
+                            <a href="#spelers" class="btn-new btn-new-small">
+                                <span>Bekijk Spelers</span>
+                                <i class="fas fa-arrow-right"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -2873,6 +2870,7 @@
                         <ul class="footer-links">
                             <li><a href="#home"><i class="fas fa-chevron-right"></i> Home</a></li>
                             <li><a href="#teams"><i class="fas fa-chevron-right"></i> Teams</a></li>
+                            <li><a href="#spelers"><i class="fas fa-chevron-right"></i> Spelers</a></li>
                             <li><a href="#nieuws"><i class="fas fa-chevron-right"></i> Nieuws</a></li>
                             <li><a href="#eventos"><i class="fas fa-chevron-right"></i> Eventos</a></li>
                             <li><a href="#kalender"><i class="fas fa-chevron-right"></i> Kalender</a></li>
