Feat: Mostrar categorias adultas y plantilla API
Agrega tarjetas de A/B/Reserves y enriquece la lista de jugadores con datos completos de la API.

--- a/index.html
+++ b/index.html
@@ -587,6 +587,66 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="teams-senior-grid">
+                    <div class="team-card">
+                        <div class="team-image">
+                            <img src="images/gallery/allen 1.jpeg" alt="A-Kern">
+                        </div>
+                        <div class="team-card-header">
+                            <span class="team-age">A-Kern</span>
+                            <i class="fas fa-futbol"></i>
+                        </div>
+                        <div class="team-card-body">
+                            <h3>Eerste Elftal</h3>
+                            <p>Seniorenploeg met competitiewedstrijden in de provinciale reeks.</p>
+                        </div>
+                        <div class="team-card-footer">
+                            <a href="#spelers" class="btn-new btn-new-small">
+                                <span>Bekijk Spelers</span>
+                                <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <div class="team-image">
+                            <img src="images/gallery/zomerkamp25.jpeg" alt="B-Kern">
+                        </div>
+                        <div class="team-card-header">
+                            <span class="team-age">B-Kern</span>
+                            <i class="fas fa-futbol"></i>
+                        </div>
+                        <div class="team-card-body">
+                            <h3>Tweede Elftal</h3>
+                            <p>Reserveteam en doorstroming naar de A-kern.</p>
+                        </div>
+                        <div class="team-card-footer">
+                            <a href="#spelers" class="btn-new btn-new-small">
+                                <span>Bekijk Spelers</span>
+                                <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="team-card">
+                        <div class="team-image">
+                            <img src="images/team/ploeg 2.jpeg" alt="Reserves">
+                        </div>
+                        <div class="team-card-header">
+                            <span class="team-age">Reserves</span>
+                            <i class="fas fa-futbol"></i>
+                        </div>
+                        <div class="team-card-body">
+                            <h3>Reserven</h3>
+                            <p>Wedstrijdritme en ontwikkelingsgroep voor senioren.</p>
+                        </div>
+                        <div class="team-card-footer">
+                            <a href="#spelers" class="btn-new btn-new-small">
+                                <span>Bekijk Spelers</span>
+                                <i class="fas fa-arrow-right"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -612,7 +672,7 @@
 
                 <div class="api-squad-section">
                     <div class="section-header-inline">
-                        <h3><i class="fas fa-users"></i> Officiële selectie (API)</h3>
+                        <h3><i class="fas fa-users"></i> Eerste elftal (API)</h3>
                         <span class="api-status" id="squadApiStatus">Nog geen API-gegevens</span>
                     </div>
                     <div class="api-squad-grid" id="apiSquadGrid"></div>
