Fix: Sponsors visibles y datos reales
Agrega preview de sponsors en Home, link directo a sponsors y reemplaza la seccion de votacion por highlights reales de la API.

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                     <li><a href="#nieuws" class="nav-link">Nieuws</a></li>
                     <li><a href="#eventos" class="nav-link">Eventos</a></li>
                     <li><a href="#kalender" class="nav-link">Kalender</a></li>
+                    <li><a href="#sponsors" class="nav-link">Sponsors</a></li>
                     <li><a href="#competities" class="nav-link">Competities</a></li>
                     <li><a href="#rivalen" class="nav-link">Rivalen</a></li>
                     <li><a href="#galerij" class="nav-link">Galerij</a></li>
@@ -212,6 +213,40 @@
                     </div>
                     <div class="recent-results-grid" id="recentResultsGrid">
                         <!-- Results will be populated by JavaScript -->
+                    </div>
+                </div>
+
+                <!-- Partners Preview -->
+                <div class="home-partners-section">
+                    <div class="home-partners-header">
+                        <h3><i class="fas fa-handshake"></i> Onze Partners</h3>
+                        <a href="#sponsors" class="view-all-link">Alle Sponsors <i class="fas fa-arrow-right"></i></a>
+                    </div>
+                    <div class="home-partners-grid">
+                        <div class="home-partner-logo">
+                            <img src="images/sponsors/Bossy.jpeg" alt="Bossypaint">
+                        </div>
+                        <div class="home-partner-logo">
+                            <img src="images/sponsors/Jovado.jpeg" alt="Jovado">
+                        </div>
+                        <div class="home-partner-logo">
+                            <img src="images/sponsors/LOGO tcd.jpeg" alt="KS Construct">
+                        </div>
+                        <div class="home-partner-logo">
+                            <img src="images/sponsors/Den ouden toren.jpeg" alt="Den Ouden Toren">
+                        </div>
+                        <div class="home-partner-logo">
+                            <img src="images/sponsors/1 dauwens-5.jpeg" alt="Dauwens">
+                        </div>
+                        <div class="home-partner-logo">
+                            <img src="images/sponsors/blauwe toren klein.jpeg" alt="Blauwe Toren">
+                        </div>
+                        <div class="home-partner-logo">
+                            <img src="images/sponsors/max nieuw.jpeg" alt="MAX">
+                        </div>
+                        <div class="home-partner-logo">
+                            <img src="images/sponsors/LOGO FRS (003).jpeg" alt="FRS">
+                        </div>
                     </div>
                 </div>
 
@@ -2932,6 +2967,7 @@
                             <li><a href="#teams"><i class="fas fa-chevron-right"></i> Teams</a></li>
                             <li><a href="#spelers"><i class="fas fa-chevron-right"></i> Spelers</a></li>
                             <li><a href="#nieuws"><i class="fas fa-chevron-right"></i> Nieuws</a></li>
+                            <li><a href="#sponsors"><i class="fas fa-chevron-right"></i> Sponsors</a></li>
                             <li><a href="#eventos"><i class="fas fa-chevron-right"></i> Eventos</a></li>
                             <li><a href="#kalender"><i class="fas fa-chevron-right"></i> Kalender</a></li>
                             <li><a href="#contact"><i class="fas fa-chevron-right"></i> Lid Worden</a></li>
